// game/commandParser.ts
export class CommandParser {
  parse(command: string): string {
      return command.toLowerCase();
  }
}
